Fix missing test data, add beta warning to readme

--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,6 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 
 # End of https://www.gitignore.io/api/java,gradle,eclipse,intellij+all
+
+# Allow logs in test resources
+!/src/test/resources/logs/*.log
