--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group = 'me.apemanzilla'
-version = '1.2.0-beta'
+version = '1.2.0-beta2'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
